<resources>
    <string name="app_name">Garden Trouble</string>
    <string name="garden_trouble">GARDEN TROUBLE</string>
    <string name="by_jasleen_kaur">By: Jasleen Kaur</string>
    <string name="grandma">Grandma</string>
    <string name="btn_skip">SKIP</string>
    <string name="description_grandma">grandma</string>
    <string name="gopher_welcome">gopher_welcome</string>
    <string name="play_game">\nPLAY\n GAME!</string>
    <string name="options">\n\nOPTIONS</string>
    <string name="help">\n\nHELP</string>
    <string name="main_menu_string_gopher_welcome">Main menu @string/gopher_welcome</string>
    <string name="main_menu">MAIN MENU</string>
    <string name="number_of_gophers">Number of gophers</string>
    <string name="number_of_games">Number of games</string>
    <string name="rabbit_welcome">rabbit welcome</string>
    <string name="scans_used"># Scans Used: 0</string>
    <string name="rabbit_number">%1$d rabbits</string>
    <string name="number_of_rabbits">Number of Rabbits:</string>
    <string name="board_size">Board Size:</string>
    <string name="settings">SETTINGS</string>
    <string name="number_of_rabbits_found">Number of Rabbits Found</string>
    <string name="congratulations_you_won">Congratulations! You Won!</string>
    <string name="congratulations_you_helped_grandma_joe_find_all_the_rabbits_in_her_garden">Congratulations! You helped Grandma Joe find all the rabbits in her garden!</string>
    <string name="congratulations_message_title">Congratulations! You Won!</string>
    <string name="txtCredit">ABOUT THE AUTHOR:\n\nHi there! My name is Jasleen Kaur and I am a student in <a href="https://www.cs.sfu.ca/CourseCentral/276/bfraser/index.html">CMPT 276.</a>
        Hope you enjoy this game made by a little brown girl :)
        \n\nHOW TO PLAY:\n\nGrandma Joe loves planting vegetables in her garden.
        Unfortunately, cute little rabbits have started to eat her vegetables!
        Help Grandma Joe find all the rabbits in her garden by tapping on the cells.
        When no rabbit is found, the cell will be scanned and a hint will be provided stating how many rabbits are hidden in the column and row of the cell tapped.
        When a rabbit is found, you will be updated with how many rabbits are remaining to be found. Find all the rabbits in the least number of scans.\n\nGood Luck!
        \n\n RESOURCES/IMAGES:
        \n\n
        <a href="http://chimneybells.blogspot.com/2013/12/garden-cartoon-pictures.html">Welcome Screen Background and App Icon</a>.\n
        <a href="http://looneytunesshow.wikia.com/wiki/Thread:15345?file=Granny_Pic.png">Grandma Cartoon</a>.\n
        <a href="http://cartoon-bunny-rabbits.clipartonline.net/">Welcome Rabbit</a>.\n
        <a href="http://zorlag.com/blog/inspiring-modern-bedroom-designs-that-make-you-thrilled/#">Main Menu Background</a>.\n
        <a href="https://www.pinterest.com.au/pin/298856125250574791/">Butterfly</a>.\n
        <a href="http://www.clipartpanda.com/clipart_images/clip-art-categories-57853835">Grass Button Background</a>.\n
        <a href="https://gallery.yopriceville.com/Free-Clipart-Pictures/Cartoons-PNG/Cute_Bunny_Cartoon_Transparent_Clip_Art_Image#.WyCaNIpKjIU">Rabbit Main Menu</a>.\n
        <a href="https://www.dreamstime.com/stock-illustration-happy-bunny-cartoon-hole-illustration-image76886576">Grid Rabbit</a>.\n
        <a href="https://www.pinterest.ca/nikmahzon/cartoon-landscape-background/">Game Background</a>.\n
        <a href="https://www.pinterest.ca/pin/557531628846470586/">Congratulations Dialog Rabbit</a>
        <a href="https://br.pinterest.com/pin/244249979770598529/">Options Screen Background</a>.\n
        <a href="http://getwallpapers.com/collection/background-clipart">Help Screen Background</a>.\n\n
        MUSIC:\n\n
        <a href="https://www.zapsplat.com/?s=happy">Scan Music</a>.\n
        <a href="https://www.zapsplat.com/?s=correct">Found Rabbit Music</a>.\n
    </string>
    <string name="txt_help">HELP</string>
    <string name="erase_times_played">Erase Times Played</string>
    <string name="grid_size">%d rows by %d columns</string>
    <string name="Number_rabbits_found">Found %d of %d Rabbits</string>
    <string name="Times_played">Number of Games Started: %d</string>
    <string name="Rabbit_cell_checked"> %d</string>
    <string name="Found_rabbit_update">Found %d of %d Rabbits</string>
    <string name="row_current_update">%d</string>
    <string name="col_current_update">%d</string>
    <string name="no_rabbit_found">%d</string>
    <string name="scans_used_txt"># Scans Used: %d</string>
    <string name="rabbit_left">rabbit left</string>
    <string name="rabbit_right">rabbit right</string>
    <string name="butterfly3">butterfly</string>
    <string name="butterfly2">butterfly</string>
    <string name="butterfly">butterfly</string>
    <string name="best_score">Best Score</string>
</resources>
